src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>OpenSMSPro__MessageID__c</fullName>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpenSMSPro__MobileNo__c</fullName>
        <description>This field is used to store MobileNo while Sending an SMS to a user</description>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OpenSMSPro__Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpenSMSPro__SMS_Parts__c</fullName>
        <label>SMS Parts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenSMSPro__SMS_Status__c</fullName>
        <label>SMS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpenSMSPro__Send_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To intimate user through SMS , Check this.</inlineHelpText>
        <label>Send SMS Notification</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>